Corrected bug with horizontal scroll between mobile resolution and tablet

--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -7,7 +7,7 @@
 
 @media (min-width: @tablet-width) {
   .container {
-    min-width: 768px;
+    min-width: 751px;
     padding: 0 30px;
   }
 }
