--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,4 +1,4 @@
-@media (max-width: @tablet-width) {
+@media (max-width: 767px) {
   .main-nav {
     display: none;
 
